# P8LH7Grounding

./: .gitignore  .gitmodules  LICENSE  README.md
custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
custom_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ur5e.srdf
custom_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  (+14 more)
custom_ur_description/: CMakeLists.txt  package.xml
database_handler/: CMakeLists.txt  database_handler.py  package.xml  setup.py
dialog_flow/: CMakeLists.txt  grounding.db  package.xml
feature_extractor/: CMakeLists.txt  color_extraction.py  feature.md  package.xml  setup.py
feature_test/: createTrainingSet.py  feature_detector.py  test.py  tripletTraining.py
find_objects/: CMakeLists.txt  package.xml  setup.py
grounding/: CMakeLists.txt  database_handler.py  grounding.db  grounding.py  package.xml  setup.py  test.py
little_helper_interfaces/: CMakeLists.txt  package.xml
msgs/: ObjectEntity.msg  ObjectInfo.msg
ner/: CMakeLists.txt  bert_ner.py  create_dataset.py  embedding_test.py  output.txt  package.xml  setup.py  test_model.py  train_ner.py
robot_control/: CMakeLists.txt  package.xml  setup.py
speech_to_text/: CMakeLists.txt  package.xml  setup.py  speechtotext.py
task_grounding/: CMakeLists.txt  package.xml  setup.py
text_to_speech/: CMakeLists.txt  azure_test.py  package.xml
tts_output/: CMakeLists.txt  package.xml
ui_interface/: CMakeLists.txt  package.xml  setup.py
ur5e_moveit_config/: .setup_assistant  package.xml
ur_e_webots/: CMakeLists.txt  package.xml
ur_e_webots/action/: Gripper.action
ur_e_webots/launch/: ur5e.launch  ur_controller.launch
ur_e_webots/scripts/: universal_robots_ros.py
ur_e_webots/src/ur_e_webots/: gripper_action_server.py
vision/: CMakeLists.txt  package.xml  setup.py  vision_controller.py
(+151 files in other folders)
